[package]
name = "ansi-senor"
version = "0.1.0"
edition = "2021"
description = "Run commands with ANSI color output captured to HTML"
license = "MIT OR Apache-2.0"
repository = "https://github.com/schacon/ansi-senor"
readme = "README.md"
keywords = ["ansi", "cli", "terminal", "html", "colors"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
md5 = "0.7"
humantime = "2.1"
ansi-to-html = "0.2"
